[package]
name = "simple"
version = "0.1.0"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/vetis"
homepage = "https://github.com/ararog/vetis"
description = "Very Tiny Server"
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "server", "rest-server"]
publish = true
rust-version = "1.75.0"

[package.metadata.wix]
upgrade-guid = "23ECFFB2-E54F-4B58-9057-4F6A3E8C89A6"
path-guid = "6D661344-550C-452E-A1CD-E321BAFA922F"
license = false
eula = false

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.61", features = ["derive"] }
env_logger = "0.11.9"
http-body-util = "0.1.3"
hyper = "1.8.1"
macro_rules_attribute = "0.2.2"
maplit = "1.0.2"
tokio = { version = "1.50.0", features = [
  "macros",
  "rt-multi-thread",
], default-features = false }
vetis = { workspace = true }
vetis-tokio = { workspace = true, features = [
  "http2",
  "rust-tls",
  "static-files",
  "reverse-proxy",
], default-features = false }
