[package]
name = "vetis-fcgi"
version = "0.1.0"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/vetis"
homepage = "https://github.com/ararog/vetis"
description = "Very Tiny Server FCGI support"
readme = "README.md"
license = "MIT"
keywords = ["http", "modules", "server", "rest-server"]
publish = true
rust-version = "1.75.0"

[features]
default = ["tokio-rt"]
smol-rt = ["dep:smol", "hyper-body-utils/smol-rt"]
tokio-rt = ["dep:tokio", "hyper-body-utils/tokio-rt"]

[dependencies]
fastcgi-client = { version = "0.10.0", optional = true }
http = "1.4.0"
hyper-body-utils = { path = "../../../hyper-body-utils", default-features = false, optional = true }
log = "0.4.29"
smol = { version = "2.0.2", default-features = false, optional = true }
tokio = { version = "1.50.0", default-features = false, optional = true }
vetis = { workspace = true, default-features = false }
