[package]
name = "vetis-interface"
version = "0.1.0"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/vetis"
homepage = "https://github.com/ararog/vetis"
description = "Very Tiny Server Interface support"
readme = "README.md"
license = "MIT"
keywords = ["http", "modules", "server", "rest-server"]
publish = true
rust-version = "1.75.0"

[dependencies]
vetis = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }