[package]
name = "vetis-static"
version = "0.1.0"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/vetis"
homepage = "https://github.com/ararog/vetis"
description = "Very Tiny Server Static Files support"
readme = "README.md"
license = "MIT"
keywords = ["http", "modules", "server", "rest-server"]
publish = true
rust-version = "1.75.0"

[dependencies]
vetis = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
typetag = "0.2.21"
parse_duration = "2.1.1"
