[package]
name = "vetis-sapi"
version = "0.1.0"
edition = "2024"

[features]
default = ["tokio-rt"]
smol-rt = ["dep:smol", "hyper-body-utils/smol-rt"]
tokio-rt = ["dep:tokio", "hyper-body-utils/tokio-rt"]

[dependencies]
http = "1.4.0"
hyper-body-utils = { path = "../../../hyper-body-utils", default-features = false, optional = true }
log = "0.4.29"
ripht-php-sapi = "0.1.0-rc.7"
smol = { version = "2.0.2", default-features = false, optional = true }
tokio = { version = "1.50.0", default-features = false, optional = true }
vetis = { path = "../../vetis", default-features = false }
